fix some bugs on mobile

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -2234,7 +2234,7 @@ a, button {
   transition: color 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), background-color 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.cross, .x, .y, .i {
+.cross, .x, .y {
   -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
   -moz-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
